--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
 streamlit 
 docling 
-chromadb 
+chromadb
+transformers
 sentence-transformers 
 langchain 
 spacy 
 pandas
 protobuf==3.20.3
 pysqlite3-binary
+torch
+numpy
+requests
